--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "autobuild": "rollup -c -w",
     "start": "sirv public",
     "start:dev": "sirv public --dev",
-    "lint": "prettier --list-different -- 'src/**/*.{html,js,svelte}'",
-    "lint:fix": "prettier --write 'src/**/*.{html,js,svelte}'"
+    "lint": "eslint ./src/**/*.{svelte,js}",
+    "format": "prettier --list-different -- 'src/**/*.{html,js,svelte}'",
+    "format:fix": "prettier --write 'src/**/*.{html,js,svelte}'"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-node-resolve": "^7.0.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-svelte3": "^2.7.3",
     "miragejs": "^0.1.37",
     "postcss-cli": "^7.1.0",
     "prettier": "^1.19.1",
